--- a/NYC_event.ipynb
+++ b/NYC_event.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,14 @@
     "from sodapy import Socrata\n",
     "import gmaps\n",
     "import folium\n",
-    "import wordcloud"
+    "import wordcloud\n",
+    "from tkinter import *\n",
+    "from tkinter.simpledialog import askstring"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,113 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Choose your option (Please run the initialization first)\n",
-      "Option 1: Data Initialization \n",
-      "Option 2: Events heatmap(this will take a little bit long, like 20 mins )\n",
-      "Option 3: Events wordcloud\n",
-      "Option 4: Search by Features\n",
-      "Option 5: Select a event\n",
-      "Option 6: Find route to the events \n",
-      "\n",
-      "Type option number to continue\n",
-      "type \"q\" to end the program6\n",
-      "\n",
-      "Choose your option (Please run the initialization first)\n",
-      "Option 1: Data Initialization \n",
-      "Option 2: Events heatmap(this will take a little bit long, like 20 mins )\n",
-      "Option 3: Events wordcloud\n",
-      "Option 4: Search by Features\n",
-      "Option 5: Select a event\n",
-      "Option 6: Find route to the events \n",
-      "\n",
-      "Type option number to continue\n",
-      "type \"q\" to end the programq\n"
-     ]
-    }
-   ],
-   "source": [
-    "option=1\n",
-    "df=0\n",
-    "while option!='q':\n",
-    "    option=input(ui+'''\n",
-    "Type option number to continue\n",
-    "type \"q\" to end the program''')\n",
-    "    \n",
-    "    if option=='q':\n",
-    "        break\n",
-    "    try:\n",
-    "        option=int(option)\n",
-    "    except:\n",
-    "        print (\"please type integer between 1 and 5\")\n",
-    "        continue\n",
-    "    if option not in [1,2,3,4,5,6]:\n",
-    "        print (\"please type integer between 1 and 5\")\n",
-    "        continue\n",
-    "    \n",
-    "    # initialization \n",
-    "    if option ==1:\n",
-    "        if df==0:\n",
-    "            df=get_data()\n",
-    "            df=initialize()\n",
-    "        else:\n",
-    "            print('you have already initialized it!')\n",
-    "            continue\n",
-    "    \n",
-    "    # heatmap \n",
-    "    if option ==2:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue\n",
-    "        get_heatmap()\n",
-    "            \n",
-    "            \n",
-    "    # wordcloud\n",
-    "    if option ==3:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue\n",
-    "        text_cloud(df)\n",
-    "        \n",
-    "        \n",
-    "    #search feature \n",
-    "    if option ==4:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue\n",
-    "        df_search =search()\n",
-    "        print(df_search)\n",
-    "    \n",
-    "    \n",
-    "    #select event\n",
-    "    if option ==5:\n",
-    "        if df is 0:\n",
-    "            print ('Please initialize data first!')\n",
-    "            continue\n",
-    "        event=select()\n",
-    "        event=to_dict(event)\n",
-    "        map_marker(event)\n",
-    "        \n",
-    "\n",
-    "    #find route\n",
-    "    if option ==6:\n",
-    "        window= Tk()\n",
-    "        start= mclass (window)\n",
-    "        window.mainloop()\n",
-    "    \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,13 +324,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import *\n",
-    "from tkinter.simpledialog import askstring\n",
-    "\n",
     "class mclass:\n",
     "    def __init__(self,  window):\n",
     "        self.window = window\n",
@@ -506,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,119 +503,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading From Internet......\n",
-      "Download Complete!\n",
-      "Initialize dataset......\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Complete!\n",
-      "Please type the index of selected event11\n",
-      "The location is ambiguous, please search on internet for the event location, type q to quitcolumbia\n",
-      "The location is ambiguous, please search on internet for the event location, type q to quitcolumbia university\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33581557b4094fc88a569c66b84f7619",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "df=get_data()\n",
-    "df=initialize()\n",
-    "event=select()\n",
-    "event=to_dict(event)\n",
-    "map_marker(event)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "address=event['event_location'].strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "address=address.replace(' ','+')\n",
-    "url='https://maps.googleapis.com/maps/api/place/textsearch/json?key=%s&query=%s&fields=formatted_address'% (api_key,address) \n",
-    "response = requests.get(url)\n",
-    "result = json.loads(response.content)\n",
-    "try:\n",
-    "    location = result['results'][0]['geometry']['location']\n",
-    "    lat = location['lat']    \n",
-    "    lng = location['lng'] \n",
-    "except:\n",
-    "    address_=input('The location is ambiguous, please search on internet for the event location, type q to quit')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0d7a4471ba94ce2b35ab114687808e7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "map_marker(event)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "option=1\n",
+    "df=0\n",
+    "while option!='q':\n",
+    "    option=input(ui+'''\n",
+    "Type option number to continue\n",
+    "type \"q\" to end the program''')\n",
+    "    \n",
+    "    if option=='q':\n",
+    "        break\n",
+    "    try:\n",
+    "        option=int(option)\n",
+    "    except:\n",
+    "        print (\"please type integer between 1 and 5\")\n",
+    "        continue\n",
+    "    if option not in [1,2,3,4,5,6]:\n",
+    "        print (\"please type integer between 1 and 5\")\n",
+    "        continue\n",
+    "    \n",
+    "    # initialization \n",
+    "    if option ==1:\n",
+    "        if df==0:\n",
+    "            df=get_data()\n",
+    "            df=initialize()\n",
+    "        else:\n",
+    "            print('you have already initialized it!')\n",
+    "            continue\n",
+    "    \n",
+    "    # heatmap \n",
+    "    if option ==2:\n",
+    "        if df is 0:\n",
+    "            print ('Please initialize data first!')\n",
+    "            continue\n",
+    "        get_heatmap()\n",
+    "            \n",
+    "            \n",
+    "    # wordcloud\n",
+    "    if option ==3:\n",
+    "        if df is 0:\n",
+    "            print ('Please initialize data first!')\n",
+    "            continue\n",
+    "        text_cloud(df)\n",
+    "        \n",
+    "        \n",
+    "    #search feature \n",
+    "    if option ==4:\n",
+    "        if df is 0:\n",
+    "            print ('Please initialize data first!')\n",
+    "            continue\n",
+    "        df_search =search()\n",
+    "        print(df_search)\n",
+    "    \n",
+    "    \n",
+    "    #select event\n",
+    "    if option ==5:\n",
+    "        if df is 0:\n",
+    "            print ('Please initialize data first!')\n",
+    "            continue\n",
+    "        event=select()\n",
+    "        event=to_dict(event)\n",
+    "        map_marker(event)\n",
+    "        \n",
+    "\n",
+    "    #find route\n",
+    "    if option ==6:\n",
+    "        window= Tk()\n",
+    "        start= mclass (window)\n",
+    "        window.mainloop()"
+   ]
   }
  ],
  "metadata": {
